--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -23,19 +23,9 @@
   padding-right: 20px;
 }
 
-/* .text_editor__toolbar div > span::after {
-  content: '\2195';
-  position: absolute;
-  font-weight: bold;
-  top: 2px;
-  right: 20px;
-  transform: scale(1.3);
-  z-index: 2;
-  border-color: black;
-} */
-
 .text_editor__toolbar button {
   border: none;
+  background: none;
 }
 
 .text_editor__toolbar button:hover {
