--- a/src/scenes/Topic/comments/comments.css
+++ b/src/scenes/Topic/comments/comments.css
@@ -2,3 +2,14 @@
   display: flex;
   justify-content: space-between;
 }
+
+.comment__section__link {
+  max-width: 15px;
+  margin-right: 10px;
+  opacity: 0.7;
+}
+
+.comment__section__link:hover {
+  opacity: 1;
+  cursor: pointer;
+}
