--- a/src/scenes/Topic/topic.css
+++ b/src/scenes/Topic/topic.css
@@ -50,7 +50,7 @@
 }
 
 .topic__edit_section {
-  padding: 10px;
+  /* padding: 10px; */
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   margin-top: 10px;
@@ -121,4 +121,15 @@
   margin-right: 5px;
   margin-left: 0;
   padding: 1px 10px;
+}
+
+.topic__permalink {
+  max-width: 15px;
+  margin: 0 10px;
+  opacity: 0.7;
+}
+
+.topic__permalink:hover {
+  opacity: 1;
+  cursor: pointer;
 }
