--- a/src/scenes/Home/TopicList/TopicList.css
+++ b/src/scenes/Home/TopicList/TopicList.css
@@ -1,14 +1,26 @@
-.topic_list__title {
+.topic_list__item {
   transition: transform 0.25s ease-out;
+  margin: 10px;
 }
 
-.topic_list__title:hover {
+.topic_list__item:hover {
   transform: scale(1.01);
+}
+
+.topic_list__title {
+  display: inline;
+  margin-left: 10px;
 }
 
 .topic_list__edit {
   float: right;
+  height: 25px;
+  width: 25px;
+  border-radius: 10px;
   z-index: 1;
+  font-size: 20px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .topic_list__btn {
@@ -43,7 +55,7 @@
   font-size: 11px;
   padding: 6px;
   background-color: #bfbfbf;
-  position: relative;  
+  position: relative;
 }
 
 .topic_section__badge:before {
@@ -68,11 +80,13 @@
 }
 
 .point_pulse {
-	animation: point_pulse 1s infinite;
-  transform-origin:70% 70%;
+  animation: point_pulse 1s infinite;
+  transform-origin: 70% 70%;
   animation-timing-function: linear;
 }
 
 @keyframes point_pulse {
-	50% { background-color: #fff; }
+  50% {
+    background-color: #fff;
+  }
 }
