--- a/src/components/TopicProgressBar/TopicProgressBar.css
+++ b/src/components/TopicProgressBar/TopicProgressBar.css
@@ -11,9 +11,10 @@
 }
 
 .progress_bar__preview {
-  height: 5px;
+  height: 20px;
+  opacity: 0.75;
   margin-bottom: 0;
   margin-top: 0;
   overflow: hidden;
-  border-radius: 0px;
+  border-radius: 0 0 5px 5px;
 }
