--- a/src/scenes/Home/TopicList/TopicList.css
+++ b/src/scenes/Home/TopicList/TopicList.css
@@ -1,6 +1,6 @@
 .topic_list__item {
   transition: transform 0.25s ease-out;
-  margin: 10px;
+  margin: 10px 0;
 }
 
 .topic_list__item:hover {
@@ -10,13 +10,16 @@
 .topic_list__title {
   display: inline;
   margin-left: 10px;
+  margin: 10px;
 }
 
 .topic_list__edit {
   float: right;
   height: 25px;
   width: 25px;
-  border-radius: 10px;
+  border-radius: 50%;
+  margin: 5px;
+  background-color: #fff;
   z-index: 1;
   font-size: 20px;
   text-align: center;
