--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -12,11 +12,11 @@
 }
 
 .card__title a {
-  color: white;
+  /* color: white; */
 }
 
 .card__title a:hover {
-  color: white;
+  /* color: white; */
 }
 
 .card__description {
