--- a/src/scenes/Home/TopicList/TopicList.css
+++ b/src/scenes/Home/TopicList/TopicList.css
@@ -1,7 +1,6 @@
 .topic_list__item {
-  transition: transform 0.25s ease-out;
+  /* transition: transform 0.25s ease-out; */
   margin: 10px 0;
-  /* height: 100%; */
 }
 
 .topic_list__item:hover {
@@ -12,6 +11,10 @@
   display: inline;
   margin-left: 10px;
   margin: 10px;
+}
+
+.my-gallery-class {
+  /* transition: none !important; */
 }
 
 .topic_list__edit {
