--- a/src/scenes/home/home.css
+++ b/src/scenes/home/home.css
@@ -7,11 +7,11 @@
   flex-flow: row wrap;
   align-content: flex-end;
   align-items: stretch;
-  /* justify-content: space-between; */
 }
 
 .topics__item {
-  transition: all 0.25s ease;
+  transition: all 0.25s;
+  transition-delay: 0.1s;
   padding: 1px;
 }
 
@@ -19,7 +19,19 @@
   flex-basis: 300px;
   flex-grow: 1;
   margin: 0 5px;
-  /* max-width: 350px; */
+  width: calc(50% - 10px);
+}
+
+/* @media (max-width: 1201px) {
+  .topics__item--grid {
+    width: calc(50% - 10px);
+  }
+} */
+
+@media (max-width: 401px) {
+  .topics__item--grid {
+    width: calc(100% - 10px);
+  }
 }
 
 .topics__title {
