Home > Grid > new layout

--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -1,28 +1,19 @@
 .card__item {
   margin-bottom: 10px;
+  border-radius: 6px;
+  box-shadow: 2px 5px 7px rgb(216, 216, 216);
+}
+
+.card__item:hover {
+  margin-bottom: 10px;
 }
 
 .card__title {
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.5rem 0.5rem 0 0;
-  border-bottom: none;
   padding: 1px 10px;
-  padding-bottom: 10px;
-  background-color: rgba(143, 143, 143, 0.11);
-}
-
-.card__title a {
-  /* color: white; */
-}
-
-.card__title a:hover {
-  /* color: white; */
+  border-radius: 6px;
 }
 
 .card__description {
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0 0 0.5rem 0.5rem;
-  border-top: none;
   padding: 10px;
 }
 
