--- a/src/scenes/Home/Home.css
+++ b/src/scenes/Home/Home.css
@@ -15,9 +15,6 @@
   padding: 1px;
 }
 
-.topics__item--grid {
-}
-
 @media (max-width: 401px) {
   .topics__item--grid {
     width: calc(100% - 10px);
@@ -32,7 +29,7 @@
   max-width: 600px;
 }
 
-.home--hidden {
+.home__loader {
   display: none;
 }
 
