--- a/src/scenes/Home/home.css
+++ b/src/scenes/Home/home.css
@@ -40,8 +40,6 @@
 }
 
 .home__settings {
-  display: flex;
-  justify-content: space-between;
   max-height: 30px;
 }
 
@@ -66,4 +64,12 @@
   .home__settings {
     display: inline;
   }
+}
+
+.home_input__settings_btn {
+  position: absolute;
+  background-color: white;
+  right: 80px;
+  top: 5px;
+  z-index: 15;
 }
