--- a/src/scenes/TopicView/SelectOption/SelectOptions.css
+++ b/src/scenes/TopicView/SelectOption/SelectOptions.css
@@ -5,3 +5,9 @@
 .category_select__option:hover {
   background-color: rgba(0, 126, 255, 0.08);
 }
+
+.category_select__sub_option {
+  padding: 5px;
+  margin-left: 15px;
+  border-left: 1px solid gray;
+}
