--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -8,6 +8,11 @@
   margin-bottom: 10px;
 }
 
+.card__title-text {
+  font-weight: 600;
+  color: rgb(63, 63, 63);
+}
+
 .card__title {
   padding: 1px 10px;
   border-radius: 6px;
