Wrappers > server config#1

--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -24,6 +24,9 @@
 
 .text_editor__toolbar select {
   border-color: #fff;
+}
+.text_editor__toolbar select {
+  border-color: #fff;
   border-right-width: 5px;
   padding-right: 20px;
 }
