App > scrollbar style

--- a/src/scenes/App/App.css
+++ b/src/scenes/App/App.css
@@ -123,3 +123,25 @@ a:visited {
 .btn-group > .btn.active {
   z-index: 0;
 }
+
+/* scroll bar start */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(138, 206, 149);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(134, 134, 134);
+}
+/* scroll bar end */
