--- a/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
+++ b/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
@@ -17,7 +17,7 @@
 
 .view_toggle {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .view_toggle__grid_toggle {
@@ -26,4 +26,6 @@
 
 .view_toggle__label {
   margin: 0 5px;
+  padding-top: 5px;
+  /* font-weight: 600; */
 }
