--- a/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
+++ b/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
@@ -27,5 +27,16 @@
 .view_toggle__label {
   margin: 0 5px;
   padding-top: 5px;
-  /* font-weight: 600; */
+  font-weight: 600;
+}
+
+.view_toggle__section {
+  margin: 5px;
+  display: inline-block;
+}
+
+@media (max-width: 550px) {
+  .view_toggle__section {
+    display: block;
+  }
 }
