--- a/src/components/Loading/loading.css
+++ b/src/components/Loading/loading.css
@@ -15,13 +15,19 @@
 }
 
 .pulse {
-	animation: pulse_animation 1s infinite;
-  transform-origin:70% 70%;
-	animation-timing-function: linear;
+  animation: pulse_animation 1s infinite;
+  transform-origin: 70% 70%;
+  animation-timing-function: linear;
 }
 
 @keyframes pulse_animation {
-	0% { transform: scale(1); }
-	50% { transform: scale(1.08); }
-	100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.08);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
