messages > close, topicList > card style

--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -1,6 +1,7 @@
 .card__item {
   margin-bottom: 10px;
   border-radius: 6px;
+  border: 1px solid rgb(216, 216, 216);
   box-shadow: 2px 5px 7px rgb(216, 216, 216);
   overflow: hidden;
 }
@@ -21,6 +22,8 @@
 }
 
 .card__description {
+  color: rgb(170, 170, 170);
+  font-size: 14px;
   padding: 10px;
   cursor: pointer;
 }
