--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+html,
+#root,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
