--- a/src/scenes/Home/TopicList/TopicList.css
+++ b/src/scenes/Home/TopicList/TopicList.css
@@ -100,3 +100,9 @@
     background-color: #fff;
   }
 }
+
+.boxAutoSizer {
+  background-color: white;
+  min-height: 100%;
+  /* height: 100vh; */
+}
