--- a/src/scenes/Home/home.css
+++ b/src/scenes/Home/home.css
@@ -1,5 +1,6 @@
 .topics__content {
-  min-height: calc(100vh - 100px);
+  /* min-height: calc(100vh - 100px); */
+  height: 100%;
   overflow-anchor: none; /* infinity scroll fix */
 }
 
