--- a/src/scenes/Home/TopicList/Grid/Grid.css
+++ b/src/scenes/Home/TopicList/Grid/Grid.css
@@ -1,15 +1,3 @@
-/* masonry layout */
-
-.my-masonry-grid {
-  display: flex;
-  margin-left: -10px; /* gutter size offset */
-  width: auto;
-}
-.my-masonry-grid_column {
-  padding-left: 10px; /* gutter size */
-  background-clip: padding-box;
-}
-
-.my-masonry-grid_column > div {
-  margin-bottom: 15px;
+.gird__masonry {
+  outline: none;
 }
