--- a/src/scenes/TabPanel/TabPanel.css
+++ b/src/scenes/TabPanel/TabPanel.css
@@ -10,6 +10,7 @@
   border-left: 1px solid rgb(236, 236, 236);
   background-color: #fff;
   overflow-y: auto;
+  transition: transform 0.3s ease-out;
 }
 
 .tab_container--full {
