--- a/src/scenes/Home/TopicList/Grid/Grid.css
+++ b/src/scenes/Home/TopicList/Grid/Grid.css
@@ -1,3 +1,15 @@
 .gird__masonry {
   outline: none;
+  max-width: 2000px;
+  margin: 0 auto;
+}
+
+.grid__row {
+  display: flex;
+  flex-direction: row;
+}
+
+.grid__row_item {
+  flex: 1 0 0;
+  padding: 5px;
 }
