--- a/src/scenes/Home/TopicList/Grid/Grid.css
+++ b/src/scenes/Home/TopicList/Grid/Grid.css
@@ -1,6 +1,7 @@
 .gird__masonry {
   outline: none;
-  max-width: 2000px;
+  max-width: 1200px;
+  /* margin-left: 20px; */
   margin: 0 auto;
 }
 
@@ -10,6 +11,6 @@
 }
 
 .grid__row_item {
-  flex: 1 0 0;
+  flex: 1 1 0;
   padding: 5px;
 }
