--- a/src/scenes/Home/TopicList/Grid/Grid.css
+++ b/src/scenes/Home/TopicList/Grid/Grid.css
@@ -12,28 +12,13 @@
   padding: 5px;
 }
 
-.grid__active_item {
-  animation: swing 1s ease;
+.grid__active_item h4 {
+  animation: blink 1s ease;
   animation-iteration-count: 1;
 }
 
-@keyframes swing {
-  15% {
-    transform: translateX(5px);
-  }
-  30% {
-    transform: translateX(-5px);
-  }
+@keyframes blink {
   50% {
-    transform: translateX(3px);
-  }
-  65% {
-    transform: translateX(-3px);
-  }
-  80% {
-    transform: translateX(2px);
-  }
-  100% {
-    transform: translateX(0);
+    opacity: 0;
   }
 }
