--- a/src/components/TextEditor/TextEditor.css
+++ b/src/components/TextEditor/TextEditor.css
@@ -4,8 +4,9 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  min-height: 200px;
-  overflow-y: hidden;
+  min-height: 300px;
+  height: max-content;
+  overflow-y: scroll;
 }
 
 /* fix rte ol */
