Add settings icon animation

--- a/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
+++ b/src/scenes/Home/HomeConfigPanel/HomeConfigPanel.css
@@ -44,3 +44,11 @@
     display: block;
   }
 }
+
+.settings_icon {
+  transition: transform 0.5s ease-out;
+}
+
+.settings_icon:hover {
+  transform: rotate(120deg) scale(1.2);
+}
