--- a/src/scenes/ShowCaseTopic/ShowCaseTopic.css
+++ b/src/scenes/ShowCaseTopic/ShowCaseTopic.css
@@ -6,7 +6,6 @@
 }
 
 .show_case__box {
-  background-color: rgb(72, 100, 224);
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -14,9 +13,15 @@
   left: 0;
   top: 0;
   overflow: auto;
-  background-image: url(https://hypercortex.network/assets/images/mountains.jpg);
-  background-blend-mode: darken;
-  color: wheat;
+}
+
+.show_case__particles {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 
 .show_case__content {
