--- a/src/scenes/TopicView/TopicView.css
+++ b/src/scenes/TopicView/TopicView.css
@@ -43,6 +43,29 @@
   margin: 10px 5px;
 }
 
+.topic_view__showcase_handler {
+  cursor: pointer;
+  background-color: #e8e8e8;
+  border-color: #d9d9d9 #ccc #b3b3b3;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+}
+
+.topic_view__showcase_editor {
+  border: none;
+  outline: none;
+  border: 0;
+}
+
+.topic_view__showcase_editor .panel-body {
+  padding: 0;
+}
+
+.topic_view__fill_data {
+  margin-top: 10px;
+}
+
 /* stabilise flag position */
 .input-group > .dropup.input-group-btn {
   vertical-align: top;
