--- a/src/scenes/TopicView/TopicView.css
+++ b/src/scenes/TopicView/TopicView.css
@@ -52,6 +52,10 @@
   padding: 5px 10px;
 }
 
+.topic_view__showcase_handler:hover {
+  background-color: rgb(248, 247, 247);
+}
+
 .topic_view__showcase_editor {
   border: none;
   outline: none;
