--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -9,6 +9,10 @@
   position: relative;
 }
 
+.card__draft {
+  background: rgb(241, 241, 241);
+}
+
 .card__title-text {
   font-weight: 600;
   color: rgb(63, 63, 63);
