--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -14,8 +14,16 @@
   background: rgb(241, 241, 241);
 }
 
-.card__dragging {
+.card--draggable {
+  transition: transform 0.5s;
+}
+
+.card--dragging {
   opacity: 0.2;
+}
+
+.card--active {
+  transform: rotate(5deg) scale(0.9) translateX(-5px);
 }
 
 .card__title-text {
