--- a/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
+++ b/src/scenes/Home/TopicList/TopicSection/TopicCard/TopicCard.css
@@ -45,10 +45,10 @@
 .card__date {
   margin-left: 10px;
   padding: 5px 0;
+  color: #7d7d7d;
 }
 
 .card__font {
-  color: rgb(170, 170, 170);
   font-size: 14px;
 }
 
