create prizes tags

--- a/src/components/TopicFundData/TopicFundData.css
+++ b/src/components/TopicFundData/TopicFundData.css
@@ -15,3 +15,13 @@
 .topic_fund_data__btn {
   margin: 0 10px;
 }
+
+.topic_fund_data__prize {
+  padding: 0 5px;
+  border-bottom: 2px solid #ffff00;
+  border-top: 2px solid #ffff00;
+  border-radius: 2px;
+  cursor: default;
+  font-weight: bold;
+  background-color: #fff9007a;
+}
